<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="model"
            type="robert.pakpahan.jetpro1.data.datalayout.detail.DetailFilm" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivBackground"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:backdropURL="@{model.backdrop_path}"
                    android:contentDescription="@string/img_bg"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_back_button"
                    android:contentDescription="@string/img_icon"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorTextIcons" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:contentDescription="@string/img_bg"
                    android:posterURL="@{model.poster_path}"
                    app:layout_constraintBottom_toBottomOf="@id/ivBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivBackground"
                    app:riv_corner_radius="@dimen/_6sdp" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:maxLines="2"
                    android:text="@{model.title}"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivPoster"
                    app:layout_constraintTop_toBottomOf="@id/ivBackground"
                    tools:text="Title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:genres="@{model.genres}"
                    android:includeFontPadding="false"
                    android:maxLines="2"
                    android:textColor="@color/colorTextOther"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    tools:text="Genre" />

                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text='@{"Score : "+ model.vote_average}'
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvGenre"
                    tools:text="8" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text='@{"Release on : "+ model.release_date}'
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvScore"
                    tools:text="Release on" />

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:maxLines="4"
                    android:text='@{model.overview}'
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_11ssp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/ivPoster"
                    tools:text="Overview" />

                <TextView
                    android:id="@+id/tvReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:text="@string/read_more"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/tvOverview"
                    app:layout_constraintTop_toBottomOf="@id/tvOverview" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/bg_favorite"
            android:padding="@dimen/_8sdp"
            android:visibility="gone"
            android:favoriteImage="@{model.favorite}"
            android:src="@drawable/ic_favorite"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/colorTextIcons"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>