<resources>
    <string name="app_name">JetPro1</string>
    <string name="title_activity_detail">Activity_detail</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="film">Film</string>
    <string name="tv_show">TvShow</string>
    <string name="favorite">Favorite</string>
    <string name="sorting">Sorting</string>
    <string name="by_name">By Name</string>
    <string name="by_release">By Release</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="img_icon">Image Icon</string>
    <string name="img_bg">Image Background</string>
    <string name="poster">Poster</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="empty_message">Data is empty</string>
</resources>