<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_detail"
    app:startDestination="@id/detail_film">

    <fragment
        android:id="@+id/detail_film"
        android:name="robert.pakpahan.jetpro1.ui.DetailFilmFragment"
        tools:layout="@layout/fragment_detail_film">
        <action
            android:id="@+id/detail_film"
            app:destination="@id/detail_film"
            app:launchSingleTop="true"
            app:popUpTo="@id/detail_film"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/detail_tv_show"
        android:name="robert.pakpahan.jetpro1.ui.DetailTvShowFragment"
        tools:layout="@layout/fragment_detail_tv_show">
        <action
            android:id="@id/detail_tv_show"
            app:destination="@id/detail_tv_show"
            app:launchSingleTop="true"
            app:popUpTo="@id/detail_tv_show"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>