<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_film"
        android:icon="@drawable/ic_film"
        android:title="@string/film" />

    <item
        android:id="@+id/fragment_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/fragment_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
</menu>